--- a/aula3/css/style4.css
+++ b/aula3/css/style4.css
@@ -2,15 +2,46 @@ header{
     background-color: #DFDFDF;
     width: 100%;
     padding-bottom: 30px;
-    padding-top: 30px;      
+    padding-top: 30px;   
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
-menu a{
-    text-decoration: none;
+nav ul{
     font-family: Arial;
-    font-style: normal;
     list-style: none;
     display: flex;
     justify-content: space-between; 
-    width: 512px;
-    
+    width: 500px; 
+}
+nav a{
+    color: #707070;
+    text-decoration: none;
+}
+.conteudo{
+    width: 1200px;
+    margin: auto;
+    margin-bottom: 40px;
+
+}
+.primeiro_conteudo, .segundo_conteudo{
+    width: 1200px;
+    display: flex;
+}
+.primeiro_conteudo{
+    background-color: #E61D59;
+    color: white;
+}
+.segundo_conteudo{
+    background-color: #06D6A0;
+    color: white;
+}
+
+footer{
+    background-color: #FAF3EC;
+    width: 100%;
+    padding-bottom: 30px;
+    padding-top: 30px;   
+    display: flex;
+    justify-content: center;
 }
